--- a/E02.html
+++ b/E02.html
@@ -1,3 +1,4 @@
+<meta charset="UTF-8">
 <script>
     //PROBLEMA: Compra na Feira
     //Considere que a pessoa foi até a feira e realizou algumas compras, sendo:
@@ -9,10 +10,21 @@
     //Calcule o custo total dos alimentos e verifique se há dinheiro suficiente para realizar a compra, indicando se sobrará ou faltará dinheiro, e também apresentando qual foi a quantia que sobrou ou faltou para realizar a compra. Apresente também na tela o valor total da compra.
 
     //ENTRADA
-
-
+    const mamao = Number(prompt(`Informe o preço da unidade do mamão:`));
+    const melancia = Number(prompt(`Informe o preço do peso da melancia:`));
+    const abacate = Number(prompt(`informe o preço da unidade do abacate:`));
+    const cebola = Number(prompt(`Informe o preço do peso da cebola:`));
+    const dinheiro = Number(prompt(`Informe quantos dinheiros você possui:`));
     //PROCESSAMENTO
-
+    let preçomamão = mamão * 5;
+    let preçomelancia = melancia * 3;
+    let preçoabacate = abacate * 4;
+    let preçocebola = cebola + math.floor;
+    let preçototal =  preçomamao + preçomelacia + preçoabacate + preçocebola;
+    let sobras = sobras - dinhero;
+    let faltará = dinheiro - sobras;
+    
+    custototal
 
     //SAÍDA
 
