--- a/E05-desafio.html
+++ b/E05-desafio.html
@@ -9,8 +9,10 @@
     */
 
     //ENTRADA
+    const procedimentobaixo = prompt(`Quantas consultas de baixa complexidade atende por dia?:`);
+    const procedimentoalto = prompt (`Quantas consultas de alta complexidade atende por dia?:`);
 
-
+    calculo veterinário
     //PROCESSAMENTO
 
     
