--- a/E03.html
+++ b/E03.html
@@ -7,7 +7,9 @@
     //Calcule se o usuário possui dinheiro suficiente para realizar a viagem para o destino que pretende. Se o usuário puder viajar, o programa apresentará a mensagem "Boa viagem" e quantos dias poderá ficar no destino, além de qual será o custo da viagem. Caso não possa viajar o programa apresentará a mensagem "Sem Férias" e também apresentará "quantos dinheiros" (R$) estão faltando para realizar a viagem.
 
     //ENTRADA
-
+    const viagem = prompt(`Para qual estado deseja realizar a viagem? (responda com MG ou RS)`);
+    const dias = Number(prompt(`Quantos dias você ficara na viagem?`));
+    const dinheiro = Number(prompt(`Quanto dinheiro tem para a viagem?`));
 
     //PROCESSAMENTO
 
